--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,11 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(185, 151, 151);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #32788b;
 }
 
 .navbar-brand img {
